removed none working links

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
       
   	<div class="col-md-4">
     
-        <img src="/img/logo2.png" class="logo centered img-responsive" alt="Responsive image" /> 
+        <img src="img/logo2.png" class="logo centered img-responsive" alt="Responsive image" /> 
       </div>
    
     <div class="col-md-6 signup">
@@ -75,7 +75,7 @@
             <div class="control-group">
               <!-- Button -->
               <div class="controls">
-                <button class="btn btn-success" id="signup"><a href="home.html">Sign Up</a></button>
+                <a href="home.html"><button class="btn btn-success" id="signup">Sign Up</button></a>
               </div>
             </div>
           </fieldset>
