--- a/signup.html
+++ b/signup.html
@@ -75,7 +75,7 @@
             <div class="control-group">
               <!-- Button -->
               <div class="controls">
-                <a href="home.html"><button class="btn btn-success" id="signup">Sign Up</button></a>
+                <button class="btn btn-success" id="signup"><a href="home.html">Sign Up</a></button>
               </div>
             </div>
           </fieldset>
