--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					</div>
                     <span class="help-block">Password error</span>
 
-					<a href="home.html"><button class="btn btn-lg btn-primary btn-block" type="submit">Login</button></a>
+					<button class="btn btn-lg btn-primary btn-block" type="submit"><a href="home.html">Login</a></button>
 				</form>
 			</div>
             
